# AI-English-Mentor

./: .env.deploy.example  .env.example  .gitignore  README.md  deploy.sh  docker-compose.yml  setup_vps.sh  setup_vps_aws.sh
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260219_0001_initial.py  20260219_0002_add_full_name_to_users.py  20260219_0003_fsrs_cefr_analysis_cache.py  20260219_0004_admin_tier_settings.py  20260219_0005_user_is_active.py  20260219_0006_reading_attempts.py  20260311_0007_app_settings_edge_tts.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  analysis.py  auth.py  chat.py  dictionary.py  providers.py  srs.py  (+5 more)
backend/app/cli/: copilot_auth.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/middleware/: rate_limit.py  request_context.py
backend/app/providers/: base.py  copilot_provider.py  copilot_token_manager.py  gemini_provider.py  ollama_provider.py
backend/app/schemas/: admin.py  analysis.py  auth.py  chat.py  messages.py  providers.py  reading.py  sessions.py  speech.py  srs.py
backend/app/services/: chat_service.py  dictionary_lookup.py  edge_tts.py  errors.py  fsrs.py  llm_router.py  llm_types.py  sm2.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_flow.py  test_edge_tts_preferences.py  test_provider_fallback.py
backend/tests/unit/: test_db_session.py  test_fsrs.py  test_llm_router.py  test_parser.py  test_sm2.py
(+40 files in other folders)
